@startuml

title US014

/'As a Product Owner, I want the system to have a type of actuator that open/closes
a blind roller (0% closed, 100% fully open).'/

interface Actuator {
    + getId() : int
    + generateId() : int
    + getType() : ActuatorType
    + operate(Value) : Value
}

class ActuatorOfBlinds {
    - id : int
    + ActuatorOfBlinds()
    + getId() : int
    + generateId() : int
    + getType() : ActuatorType
    + operate(Value) : Value
}


enum ActuatorType{
    - name : String
    + ActuatorType(...)
}

ActuatorOfBlinds"*" ..|>"1" Actuator : " implements"
ActuatorOfBlinds"1" o-- "1" ActuatorType : "contains"

@enduml